syntax = "proto3";
package benchmark;
option go_package = "./testcase";

//--------------------request & response--------------

message Number {
  int32 field1 = 1;
  int64 field2 = 2;
  uint32 field3 = 3;
  uint64 field4 = 4;
  sint32 field5 = 5;
  sint64 field6 = 6;
  bool field7 = 7;
  float field8 = 8;
  double field9 = 9;
  fixed32 field10 = 10;
  fixed64 field11 = 11;
  sfixed32 field12 = 12;
  sfixed64 field13 = 13;
}

message String {
  string field1 = 1;
  bytes field2 = 2;
}

message List {
  repeated int32 field1 = 1;
  repeated int64 field2 = 2;
  repeated uint32 field3 = 3;
  repeated uint64 field4 = 4;
  repeated sint32 field5 = 5;
  repeated sint64 field6 = 6;
  repeated bool field7 = 7;
  repeated float field8 = 8;
  repeated double field9 = 9;
  repeated fixed32 field10 = 10;
  repeated fixed64 field11 = 11;
  repeated sfixed32 field12 = 12;
  repeated sfixed64 field13 = 13;
  repeated string field14 = 14;
  repeated bytes field15 = 15;
}

message Map {
  map<int32, int64> field1 = 1;
  map<uint32, uint64> field2 = 2;
  map<sint32, sint64> field3 = 3;
  map<fixed32, fixed64> field4 = 4;
  map<sfixed32, sfixed64> field5 = 5;
  map<string, bytes> field6 = 6;
}
